selfhost/test/lexer/strings_error_invalid_unicode_seq_eof.out
Error at %FILE_NAME%:1:2
Unsupported escape sequence:
  |  "\u04
      ^^^^
Unicode escape sequences must be \u followed by 4 hexadecimal characters (between 0000 and 7FFF)